# src/Workbench.Server/Persistence/DatabaseReadinessCheck.cs
@@ -127,6 +127,8 @@ public sealed class DatabaseReadinessCheck(
                     AND HAS_PERMS_BY_NAME(N'[Inventory].[AcquisitionDocumentOperations]', N'OBJECT', N'DELETE') = 0
                     AND HAS_PERMS_BY_NAME(N'[Purchasing].[CreateDraftOrder]', N'OBJECT', N'EXECUTE') = 1
                     AND HAS_PERMS_BY_NAME(N'[Purchasing].[UpdateDraftOrder]', N'OBJECT', N'EXECUTE') = 1
+                    AND HAS_PERMS_BY_NAME(N'[Purchasing].[DeleteDraftOrder]', N'OBJECT', N'EXECUTE') = 1
+                    AND COL_LENGTH(N'Purchasing.DraftOrders', N'IsDeleted') IS NOT NULL
                     AND HAS_PERMS_BY_NAME(N'[Purchasing].[DraftOrders]', N'OBJECT', N'SELECT') = 1
                     AND HAS_PERMS_BY_NAME(N'[Purchasing].[DraftOrders]', N'OBJECT', N'INSERT') = 0
                     AND HAS_PERMS_BY_NAME(N'[Purchasing].[DraftOrders]', N'OBJECT', N'UPDATE') = 0
